# SHL_Assesment

./: .dockeringnore  .gitignore  Dockerfile  README.md  backup.sql  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: README.md  assessments.json  assessments_index.faiss  catalog.json  category_index.json  embeddings.json  id_mapping.json  keyword_index.json
src/: __init__.py  agent.py  catalog_indexer.py  catalog_loader.py  context.py  database.py  embeddings.py  llm_client.py  models.py  retriever.py
